commit new code

--- a/Vue/index.html
+++ b/Vue/index.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="vi">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quản lý dự án</title>
-    <link rel="stylesheet" type="text/css" href="/src/assets/base.css">
-</head>
+    <title>Quản trị công việc</title>
+    <link rel="stylesheet" type="text/css" href="/src/assets/base.css" />
+  </head>
 
-<body>
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-</body>
-
+  </body>
 </html>
